[package]
name = "exchange-runtime-api"
version = "2.0.0"
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = "2018"
license = "GPL-3.0-or-later"

[dependencies]
sp-api = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }
#frame-support = { version = "3.0.0", default-features = false, git = "https://github.com/paritytech/substrate.git" }

#[dev-dependencies]
#serde_json = "1.0"

[features]
default = ["std"]
std = [
	"sp-api/std",
]
